Changed templates (prepared for making home page)

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,10 @@
-Hello!
+{%  extends 'PhotoAssessmentBundle:Components/layouts:base.html.twig' %}
+
+{% block title %}{{ 'title' | trans }}{% endblock %}
+
+{% block body_modif %} class="p-index"{% endblock %}
+
+{% block body %}
+		<h1 class="b-index-header">{{ 'title' | trans }}</h1>
+		<div class="b-index-"></div>
+{% endblock body %}
