--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -24,7 +24,7 @@
 {#    <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="<apple-touch-icon></apple-touch-icon>" href="/favicon-mobile.png" /> #}
 {% block assets_css %}
-	{% stylesheets output='static/css/survey.css' filter="" combine=true
+	{% stylesheets output='static/css/commons.css' filter="" combine=true
 		'@PhotoAssessmentBundle/Resources/assets/scss/reset.scss'
 		'@PhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.ui.modif.css'
 		'@PhotoAssessmentBundle/Resources/assets/bem/pages/p-survey/*.scss'
