Fix in base template

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -5,7 +5,8 @@
 <!--[if IE 8 ]>    <html lang="en" class="nojs ie ie8"> <![endif]-->
 <!--[if IE 9 ]>    <html lang="en" class="nojs ie ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
-#}<html lang="{{app.request.locale}}"{% block html_modif %} class="{% block html_class %}nojs{% endblock %}"{% endblock %}> <!--<![endif]-->
+#}<html lang="{{app.request.locale}}"{% block html_modif %} class="{% block html_class %}nojs{% endblock %}"{% endblock %}>
+{# <!--<![endif]--> #}
 <head>
 {% block head %}
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
