First draft of index page (/index-test/).

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -28,7 +28,7 @@
 	{% stylesheets output='static/css/commons.css' filter="" combine=true
 		'@PhotoAssessmentBundle/Resources/assets/scss/reset.scss'
 		'@PhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.ui.modif.css'
-		'@PhotoAssessmentBundle/Resources/assets/bem/pages/p-survey/*.scss'
+		'@PhotoAssessmentBundle/Resources/assets/bem/pages/*/*.scss'
 		'@PhotoAssessmentBundle/Resources/assets/bem/blocks/*/*.scss'
 	    %}
 	    <link rel="stylesheet" href="{{ asset_url }}" type="text/css" media="all" />
