--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
@@ -5,6 +5,50 @@
 {% block body_modif %} class="p-index"{% endblock %}
 
 {% block body %}
-		<h1 class="b-index-header">{{ 'title' | trans }}</h1>
-		<div class="b-index-"></div>
+		<div class="p-index__header">
+			<h1 class="p-index__header-title">{{ 'title' | trans }}</h1>
+{#			<div class="p-index__header-subtitle">share your view on photographs</div>
+#}		</div>
+		
+		<p class="p-index__questions">{{ 'index.questions' | trans }}</p>
+
+		<div class="p-index__startbutton-container">
+			<a class="p-index__startbutton" href="{{ path("pat_default_survey") }}">{{ (userIsReturning ? 'index.startbutton_newuser' : 'index.startbutton_returninguser' ) | trans }}</a>
+			<div class="p-index__startbutton-agreement">{{ 'index.startbutton-agreement' | trans }}</div>
+			<div class="p-index__startbutton-tip">{{ 'index.startbutton-tip' | trans }}</div>
+		</div>
+		
+		<p class="p-index__description">
+			{{- 'index.description_1_1' | trans -}}
+			<a target="_blank" href="http://www.flickr.com/">{{- 'index.description_1_2' | trans -}}</a>
+			{{- 'index.description_1_3' | trans -}}
+			<a target="_blank" href="http://www.panoramio.com/">{{- 'index.description_1_4' | trans -}}</a>
+			{{- 'index.description_1_5' | trans -}}
+			<a target="_blank" href="http://www.geograph.org.uk">{{- 'index.description_1_6' | trans -}}</a>
+			{{- 'index.description_1_7' | trans -}}
+		</p>
+		<p class="p-index__description">{{- 'index.description_2' | trans -}}</p>
+		
+		<div class="p-index__details">
+			<h2 class="p-index__details-header">{{- 'index.details-header' | trans -}}</h2>
+			<p class="p-index__details-left">
+			{{- 'index.details_1_1' | trans -}}
+			<a target="_blank" href="http://en.kachkaev.ru/">{{- 'index.details_1_2' | trans -}}</a>
+			{{- 'index.details_1_3' | trans -}}
+			<a target="_blank" href="http://www.city.ac.uk/">{{- 'index.details_1_4' | trans -}}</a>
+			{{- 'index.details_1_5' | trans -}}
+			<a target="_blank" href="http://www.soi.city.ac.uk/~jwo/">{{- 'index.details_1_6' | trans -}}</a>
+			{{- 'index.details_1_7' | trans -}}
+			<a target="_blank" href="http://creativecommons.org/licenses/by/2.0/" title="{{- 'index.details_1_8_title' | trans -}}">{{- 'index.details_1_8' | trans -}}</a>
+			{{- 'index.details_1_9' | trans -}}
+			<a target="_blank" href="#">{{- 'index.details_1_10' | trans -}}</a>
+			{{- 'index.details_1_11' | trans -}}
+			</p>
+			<p class="p-index__details-right">
+			{{- 'index.details_2_1' | trans -}}
+			<a target="_blank" href="http://creativecommons.org/licenses/by-sa/2.0/" title="{{- 'index.details_2_2_title' | trans -}}">{{- 'index.details_2_2' | trans -}}</a>
+			{{- 'index.details_2_3' | trans -}}
+			</p>
+			<p class="p-index__details-right">{{- 'index.details_3_1' | trans -}}</p>
+		</div>
 {% endblock body %}
