Missing <title> fix

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,6 @@
 {%  extends 'PhotoAssessmentBundle:Components/layouts:base.html.twig' %}
 
-{% block title %}{{ 'title' | trans }}{% endblock %}
+{% block head_title %}{{ 'title' | trans }}{% endblock %}
 
 {% block body_modif %} class="p-index"{% endblock %}
 
