Added tooltips to questions (both in English and Russian)

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-questionnaire/b-survey-questionnaire.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-questionnaire/b-survey-questionnaire.scss
@@ -20,7 +20,9 @@
 .b-survey-questionnaire__questiontext {
 	line-height: 16px;
 	float: left;
+	cursor: help;
 }
+
 .b-survey-questionnaire__questiontext_disabled {
 	opacity: 0.4;
 }
