New question tooltips based on jQuery UI tooltips

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-questionnaire/b-survey-questionnaire.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-questionnaire/b-survey-questionnaire.scss
@@ -33,3 +33,27 @@
 	overflow: visible;
 	position: relative;
 }
+
+.b-survey-questionnaire__questiontip{
+	background: #fffcd2 !important;
+	color: #999;
+	width: 300px;
+	font-size: 14px !important;
+	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+	border: 1px solid #999 !important;
+	
+	-webkit-border-radius: .5em; 
+	-moz-border-radius: .5em;
+	-o-border-radius: .5em;
+	border-radius: .5em;
+	background: #fcfc80;
+	
+	box-shadow: none;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	-o-box-shadow: none;
+}
+
+.b-survey-questionnaire__questiontip .ui-tooltip-content {
+	background: #fffcd2;
+}
