--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -11,17 +11,12 @@
 	</div>
 	<div class="p-survey__leftcol">
 		<div class="b-survey-photo"></div>
-		
-		<div class="b-survey-dashboard">
-			<ul class="b-survey-dashboard__items">
-			</ul>
-			<div class="b-survey-dashboard__hint"></div>
-		</div>
 	</div>
 	<div class="p-survey__rightcol">
 		<ul class="b-survey-questionnaire" style="display:none">
 			<li class="b-survey-questionnaire__question b-survey-questionnaire__question_current">
-				<div class="b-survey-questionnaire__questiontext" title="{{ "question.IsRealPhoto.hint" | trans }}">{{ "question.IsRealPhoto" | trans }}</div>
+				<div class="b-survey-questionnaire__questiontext">{{ "question.IsRealPhoto" | trans }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsRealPhoto.hint" | trans | nl2br }}</div>
 				<div data-q="qIsRealPhoto" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -32,7 +27,8 @@
 			</li>
 			
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext" title="{{ "question.IsOutdoors.hint" | trans }}">{{ "question.IsOutdoors" | trans }}</div>
+				<div class="b-survey-questionnaire__questiontext">{{ "question.IsOutdoors" | trans }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsOutdoors.hint" | trans | nl2br }}</div>
 				<div data-q="qIsOutdoors" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -43,7 +39,8 @@
 			</li>
 
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext" title="{{ "question.TimeOfDay.hint" | trans }}">{{ "question.TimeOfDay" | trans }}</div>
+				<div class="b-survey-questionnaire__questiontext">{{ "question.TimeOfDay" | trans }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.TimeOfDay.hint" | trans | nl2br }}</div>
 				<div data-q="qTimeOfDay" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="2"     class="color_green">{{ "answer.night" | trans }}</li>
@@ -55,7 +52,8 @@
 			</li>
 			
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext" title="{{ "question.SubjectTemporary.hint" | trans }}">{{ "question.SubjectTemporary" | trans }}</div>
+				<div class="b-survey-questionnaire__questiontext">{{ "question.SubjectTemporary" | trans }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.SubjectTemporary.hint" | trans | nl2br }}</div>
 				<div data-q="qSubjectTemporal" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -66,7 +64,8 @@
 			</li>
 
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext" title="{{ "question.SubjectPeople.hint" | trans }}">{{ "question.SubjectPeople" | trans }}</div>
+				<div class="b-survey-questionnaire__questiontext">{{ "question.SubjectPeople" | trans }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.SubjectPeople.hint" | trans | nl2br }}</div>
 				<div data-q="qSubjectPeople" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -77,7 +76,8 @@
 			</li>
 			
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext" title="{{ "question.IsLocationCorrect.hint" | trans }}">{{ "question.IsLocationCorrect" | trans }}</div>
+				<div class="b-survey-questionnaire__questiontext">{{ "question.IsLocationCorrect" | trans }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsLocationCorrect.hint" | trans | nl2br }}</div>
 				<div data-q="qIsLocationCorrect" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -89,7 +89,8 @@
 			</li>
 			
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext" title="{{ "question.IsByPedestrian.hint" | trans }}">{{ "question.IsByPedestrian" | trans }}</div>
+				<div class="b-survey-questionnaire__questiontext">{{ "question.IsByPedestrian" | trans }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsByPedestrian.hint" | trans | nl2br }}</div>
 				<div data-q="qIsByPedestrian" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -100,7 +101,8 @@
 			</li>
 			
 			<li class="b-survey-questionnaire__question">
-				<div class="b-survey-questionnaire__questiontext" title="{{ "question.IsSpaceAttractive.hint" | trans }}">{{ "question.IsSpaceAttractive" | trans }}</div>
+				<div class="b-survey-questionnaire__questiontext">{{ "question.IsSpaceAttractive" | trans }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsSpaceAttractive.hint" | trans | nl2br }}</div>
 				<div data-q="qIsSpaceAttractive" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -117,6 +119,12 @@
 #}				<a class="i-button-next b-button b-button_color-blue b-button_size-medium" href="#">{{ "button.next" | trans }}</a>
 			</div>
 			<div class="b-survey-controls__hint"></div>
+		</div>
+		
+		<div class="b-survey-dashboard">
+			<ul class="b-survey-dashboard__items">
+			</ul>
+			<div class="b-survey-dashboard__hint"></div>
 		</div>
 	</div>
 {% endblock body %}
