--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -22,8 +22,8 @@
     {%- block head_description -%}
     {%- endblock -%}
     "/> #}
-{#    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="<apple-touch-icon></apple-touch-icon>" href="/favicon-mobile.png" /> #}
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+{#  <link rel="<apple-touch-icon></apple-touch-icon>" href="/favicon-mobile.png" /> #}
 {% block assets_css %}
 	{% stylesheets output='static/css/commons.css' filter="" combine=true
 		'@PhotoAssessmentBundle/Resources/assets/scss/reset.scss'
