--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -16,7 +16,7 @@
 		<ul class="b-survey-questionnaire" style="display:none">
 			<li class="b-survey-questionnaire__question b-survey-questionnaire__question_current">
 				<div class="b-survey-questionnaire__questiontext">{{ "question.IsRealPhoto" | trans }}</div>
-				<div class="b-survey-questionnaire__questionhint">{{ "question.IsRealPhoto.hint" | trans | nl2br }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsRealPhoto.hint" | trans }}</div>
 				<div data-q="qIsRealPhoto" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -28,7 +28,7 @@
 			
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">{{ "question.IsOutdoors" | trans }}</div>
-				<div class="b-survey-questionnaire__questionhint">{{ "question.IsOutdoors.hint" | trans | nl2br }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsOutdoors.hint" | trans }}</div>
 				<div data-q="qIsOutdoors" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -40,7 +40,7 @@
 
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">{{ "question.TimeOfDay" | trans }}</div>
-				<div class="b-survey-questionnaire__questionhint">{{ "question.TimeOfDay.hint" | trans | nl2br }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.TimeOfDay.hint" | trans }}</div>
 				<div data-q="qTimeOfDay" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="2"     class="color_green">{{ "answer.night" | trans }}</li>
@@ -53,7 +53,7 @@
 			
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">{{ "question.SubjectTemporary" | trans }}</div>
-				<div class="b-survey-questionnaire__questionhint">{{ "question.SubjectTemporary.hint" | trans | nl2br }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.SubjectTemporary.hint" | trans }}</div>
 				<div data-q="qSubjectTemporal" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -65,7 +65,7 @@
 
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">{{ "question.SubjectPeople" | trans }}</div>
-				<div class="b-survey-questionnaire__questionhint">{{ "question.SubjectPeople.hint" | trans | nl2br }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.SubjectPeople.hint" | trans }}</div>
 				<div data-q="qSubjectPeople" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -77,7 +77,7 @@
 			
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">{{ "question.IsLocationCorrect" | trans }}</div>
-				<div class="b-survey-questionnaire__questionhint">{{ "question.IsLocationCorrect.hint" | trans | nl2br }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsLocationCorrect.hint" | trans | nl2br | replace("\n", " ") | raw }}</div>
 				<div data-q="qIsLocationCorrect" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -90,7 +90,7 @@
 			
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">{{ "question.IsByPedestrian" | trans }}</div>
-				<div class="b-survey-questionnaire__questionhint">{{ "question.IsByPedestrian.hint" | trans | nl2br }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsByPedestrian.hint" | trans }}</div>
 				<div data-q="qIsByPedestrian" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
@@ -102,7 +102,7 @@
 			
 			<li class="b-survey-questionnaire__question">
 				<div class="b-survey-questionnaire__questiontext">{{ "question.IsSpaceAttractive" | trans }}</div>
-				<div class="b-survey-questionnaire__questionhint">{{ "question.IsSpaceAttractive.hint" | trans | nl2br }}</div>
+				<div class="b-survey-questionnaire__questionhint">{{ "question.IsSpaceAttractive.hint" | trans }}</div>
 				<div data-q="qIsSpaceAttractive" class="b-survey-questionnaire__questionanswer">
 					<ul class="b-switch b-switch_with-hard-to-say">
 						<li data-v="0" class="color_green">{{ "answer.no" | trans }}</li>
