--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -42,7 +42,7 @@
 
 <body{% block body_modif %}{% endblock %}>{% block body %}{% endblock -%}
 
-<div class="b-footer">{#<table><tr><td><a href="mailto:alexander.kachkaev.1@city.ac.uk?subject={{ 'title' | trans }}">{{ 'footer.contact_author' | trans }}</a></td><td>#}<div class="yashare-auto-init" data-yashareL10n="{{ app.request.locale }}" data-yashareType="none" data-yashareQuickServices="facebook,twitter,gplus,vkontakte" data-yashareLink="{{ url("pat_default_index") }}"></div>{#}</td></tr></table>#}</div> 
+<div class="b-footer">{#<table><tr><td><a href="mailto:alexander.kachkaev.1@city.ac.uk?subject={{ 'title' | trans }}">{{ 'footer.contact_author' | trans }}</a></td><td>#}<div class="yashare-auto-init" data-yashareL10n="{{ app.request.locale }}" data-yashareType="none" data-yashareQuickServices="facebook,twitter,gplus,vkontakte" data-yashareLink="{{ url("pat_default_index") }}" data-yashareTitle="{{ 'share.title' | trans }}"></div>{#}</td></tr></table>#}</div> 
 
 {% block assets_js %}
 	{% javascripts output='static/js/vendor.js' filter="" combine=true
