Language updates (mainly, translation of home page into Russion).

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-index/p-index.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-index/p-index.scss
@@ -92,7 +92,7 @@
 .p-index__startbutton-agreement {
 	text-align: center;
 	opacity: 0.4;
-	margin-top: 11px;
+	margin: 11px auto 0;
 	font-size: 11px;
 	line-height: 14px;
 	/* display: none; */
@@ -130,11 +130,11 @@
 }
 .p-index__details-left{
 	float: left;
-	width: 45%;
+	width: 46%;
 	opacity: 0.4;
 }
 .p-index__details-right{
 	float: right;
-	width: 45%;
+	width: 46%;
 	opacity: 0.4;
 }
