--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
@@ -1,6 +1,9 @@
 .b-survey-photo {
 	height: 600px;
 }
+.b-survey-photo_nomap {
+	height: auto;	
+}
 .b-survey-photo__info {
 	display: block;
 	margin: -15px -15px 30px;
