Added dynamically toggling favicon when window is blurred or focused  (just for decoration)

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -22,7 +22,7 @@
     {%- block head_description -%}
     {%- endblock -%}
     "/> #}
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+	<link class="b-favicon" rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 {#  <link rel="<apple-touch-icon></apple-touch-icon>" href="/favicon-mobile.png" /> #}
 {% block assets_css %}
 	{% stylesheets output='static/css/commons.css' filter="" combine=true
