Next button is not shown on the questionnaire page by default before other things have started loading.

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -113,7 +113,7 @@
 			</li>
 			
 		</ul>
-		<div class="b-survey-controls">
+		<div class="b-survey-controls" style="display:none">
 			<div class="b-survey-controls__buttons">
 	{#			<a class="i-button-prev b-button b-button_color-white b-button_size-medium" href="#">Previous</a>
 #}				<a class="i-button-next b-button b-button_color-blue b-button_size-medium" href="#">{{ "button.next" | trans }}</a>
