--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -25,7 +25,7 @@
 	<link class="b-favicon" rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 {#  <link rel="<apple-touch-icon></apple-touch-icon>" href="/favicon-mobile.png" /> #}
 {% block assets_css %}
-	{% stylesheets output='static/css/commons.css' filter="" combine=true
+	{% stylesheets output='static/css/commons.css' filter="?yui_css" combine=true
 		'@PhotoAssessmentBundle/Resources/assets/scss/reset.scss'
 		'@PhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.ui.modif.css'
 		'@PhotoAssessmentBundle/Resources/assets/bem/pages/*/*.scss'
@@ -45,7 +45,7 @@
 <div class="b-footer">{#<table><tr><td><a href="mailto:alexander.kachkaev.1@city.ac.uk?subject={{ 'title' | trans }}">{{ 'footer.contact_author' | trans }}</a></td><td>#}<div class="yashare-auto-init" data-yashareL10n="{{ app.request.locale }}" data-yashareType="none" data-yashareQuickServices="facebook,twitter,gplus,vkontakte" data-yashareLink="{{ url("pat_default_index") }}" data-yashareTitle="{{ 'share.title' | trans }}"></div>{#}</td></tr></table>#}</div> 
 
 {% block assets_js %}
-	{% javascripts output='static/js/vendor.js' filter="" combine=true
+	{% javascripts output='static/js/vendor.js' filter="?closure" combine=true
     '@PhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.js'
     '@PhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.dump.js'
     '@PhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.timers.js'
@@ -64,7 +64,7 @@
     	<script type="text/javascript" src="{{ asset_url }}"></script>
     {%- endjavascripts -%}
 
-	{% javascripts output='static/js/commons.js' filter=""
+	{% javascripts output='static/js/commons.js' filter="?closure"
 		'@PhotoAssessmentBundle/Resources/assets/js/pat/*.js'
 		'@PhotoAssessmentBundle/Resources/assets/js/pat/photoInfoProvider/*.js'
 		'@PhotoAssessmentBundle/Resources/assets/bem/blocks/*/*.js'
