--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-dashboard/b-survey-dashboard.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-dashboard/b-survey-dashboard.scss
@@ -95,6 +95,7 @@
 .b-survey-dashboard_nomap .b-survey-dashboard__hint {
 	position: relative;
 	margin-top: -30px;
+	height: 25px;	
 }
 
 .b-survey-dashboard__hint.info {
