Fixes after renaming PhotoAssessmentBundle to KachkaevPhotoAssessmentBundle

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/survey.html.twig
@@ -1,4 +1,4 @@
-{%  extends 'PhotoAssessmentBundle:Components/layouts:base.html.twig' %}
+{%  extends 'KachkaevPhotoAssessmentBundle:Components/layouts:base.html.twig' %}
 
 {% block head_title %}{{ 'title' | trans }}{% endblock %}
 
