Start implementing results page

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
@@ -4,6 +4,11 @@
 .b-survey-photo_nomap {
 	height: auto;	
 }
+
+.b-survey-photo_small {
+    height: 300px;
+}
+
 .b-survey-photo__info {
 	display: block;
 	margin: -15px -15px 30px;
