--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
@@ -27,9 +27,9 @@
         
         <tr>
             <td>
-                <div class="b-responsepattern b-responsepattern_user"></div>
+                <div class="b-photoresponsepattern b-photoresponsepattern_user"></div>
             </td><td>
-                <div class="b-responsepattern b-responsepattern_photo"></div>
+                <div class="b-photoresponsepattern b-photoresponsepattern_photo"></div>
             </td><td>
                 <div class="b-survey-photo b-survey-photo_small"></div>
             </td>
