Double clicking on user / photo on the results page toggles status

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -69,6 +69,7 @@
     {%- endjavascripts -%}
 
 	{% javascripts output='static/js/commons.js' filter="?closure"
+		'@KachkaevPhotoAssessmentBundle/Resources/assets/js/config.js'
 		'@KachkaevPhotoAssessmentBundle/Resources/assets/js/pat/*.js'
 		'@KachkaevPhotoAssessmentBundle/Resources/assets/js/pat/photoInfoProvider/*.js'
 		'@KachkaevPhotoAssessmentBundle/Resources/assets/bem/blocks/*/*.js'
