--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photoresponsepattern/b-photoresponsepattern.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photoresponsepattern/b-photoresponsepattern.scss
@@ -3,3 +3,16 @@
 	width: 300px;
 	height: 350px;
 }
+
+.b-photoresponsepattern .answer {
+	fill: none;
+	opacity: 0.2;
+	stroke-width: 4;
+	stroke: black;
+	cursor: pointer;
+/* 	interpolate: basis; */
+}
+
+.b-photoresponsepattern .answer:hover {
+    opacity: 0.5;
+}
